# dpmatchsrvf

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  testdata.npy
data/: q.mat
src/DPmatchsrvf/: DPmatchsrvf.cpp
src/dpmatchsrvf/: __init__.py  dpmatch.cpp  dpmatch.h  dpmatchsrvfapp.cpp  pydpmatchsrvf.cpp
tests/: test.py
