[build-system]
#requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
requires = ["setuptools", "wheel", "cmake>=3.1.0", "nanobind"]
#build-backend = ["scikit_build_core.build"]

[project]
name = "dpmatchsrvf"
version = "0.1"
description = "Dynamic Programming for Shape Matching"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Shantanu H. Joshi", email = "shjoshi@ieee.org" },
]
dependencies = [
    'nanobind @ https://github.com/wjakob/nanobind.git',
]

[project.urls]
Homepage = "https://github.com/pysrvf/dpmatchsrvf"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
